# market-intelligence-core

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_request.yml  model_issue.yml
.github/workflows/: ci.yml  release.yml
apps/web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  fixtures.ts  index.css  main.tsx
apps/web/src/test/: setup.ts
apps/web/tests/e2e/: accessibility.spec.ts  decision-workbench.spec.ts  performance.spec.ts
crates/gm-api/: Cargo.toml
crates/gm-api/src/: lib.rs  main.rs
crates/gm-domain/: Cargo.toml
crates/gm-domain/src/: context.rs  event_study.rs  features.rs  indicators.rs  lib.rs  model.rs  ontology.rs  risk.rs  rules.rs  scoring.rs  stochastic.rs  taxonomy.rs  types.rs
crates/gm-domain/tests/: decision_perf.rs
crates/gm-integrations/: Cargo.toml
crates/gm-integrations/src/: lib.rs
crates/gm-persistence/: Cargo.toml
crates/gm-persistence/src/: lib.rs
crates/gm-worker/: Cargo.toml
crates/gm-worker/src/: main.rs
docs/: ALGORITHM.md  API.md  ARCHITECTURE.md  DEBUGGING.md  INTEGRATIONS.md  KNOWLEDGE_BASE.md  MIGRATION_PLAN.md  MODEL.md  PAYMENTS.md  PUBLIC_READINESS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_PLAN.md  ROADMAP.md  TESTING.md  UI_UX.md
infra/: docker-compose.yml
migrations/: 20260706000100_init.sql  20260706000200_decision_inputs.sql  20260708000100_payment_events.sql
scripts/: smoke_api.sh  verify_postgres.sh
