[workspace]
members = [
    "crates/gm-api",
    "crates/gm-domain",
    "crates/gm-integrations",
    "crates/gm-persistence",
    "crates/gm-worker",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
authors = ["Chandrashekhar Hegde <hegdechandrashekhar16@gmail.com>"]
repository = "https://github.com/llMr-Sweetll/market-intelligence-core"
license-file = "LICENSE"
publish = false

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = [
    "chrono",
    "json",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18", features = ["serde", "v5"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
