[package]
name = "gm-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
gm-domain = { path = "../gm-domain" }
gm-persistence = { path = "../gm-persistence" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
