[package]
name = "gm-integrations"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait.workspace = true
chrono.workspace = true
gm-domain = { path = "../gm-domain" }
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
