[package]
name = "gm-worker"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
gm-domain = { path = "../gm-domain" }
gm-persistence = { path = "../gm-persistence" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
